# django-hexagonal

./: .dockerignore  .env  .gitignore  4d2d_settings-local  Dockerfile  docker-compose.yml  model.txt  pyproject.toml  rabbitmq-defs.json
e2e/: Dockerfile  cypress.config.js  package-lock.json  package.json
e2e/cypress/e2e/: spec.cy.js
e2e/cypress/results/: output.xml
hexa/: db.sqlite3
hexa/adapters/database/: adapter.py  models.py
hexa/adapters/migrations/: 0001_initial.py
hexa/api/: models.py  renderer.py  serializers.py  urls.py  views.py
hexa/api/migrations/: 0001_initial.py  0002_delete_offer.py
hexa/domain/: actions.py  database_interface.py  models.py
hexa/hexa/: settings.py  urls.py
hexa/message_listener/: apps.py  queue_listener.py
hexa/message_listener/management/commands/: command_listener.py
hexa/message_producer/: send.py
hexa/tests/: test_api.py  test_models.py  test_setup.py
nextjs/src/: config.ts
nextjs/src/app/: layout.tsx  page.tsx
nextjs/src/components/: BlogPostPreview.tsx  Header.tsx
